fix: help button visible on small screens

--- a/src/app/file-explorer/file-explorer.component.scss
+++ b/src/app/file-explorer/file-explorer.component.scss
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-height: 0;
+}
+
+mat-tree {
+  flex: 1 1 auto;
+  min-height: 0;
+  overflow-y: auto;
 }
 
 .center-content {
@@ -21,6 +28,6 @@ button.song-link-button {
 .help-link {
   display: flex;
   justify-content: center;
-  margin-top: auto;
+  margin-top: 10px;
   margin-bottom: 16px;
 }
